Configure schedulers