@@ -10,8 +10,24 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.zakgof:actr:0.1.0'
-    implementation 'com.typesafe.akka:akka-actor_2.12:2.5.21'
-    implementation 'org.openjdk.jmh:jmh-core:1.21'
-    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.21'
+    implementation 'com.github.zakgof:actr:0.3.2'
+    implementation 'com.typesafe.akka:akka-actor_2.13:2.6.1'
+    implementation 'org.openjdk.jmh:jmh-core:1.22'
+    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.22'
+}
+
+jmh {
+    jvmArgs = '--enable-preview'
+}
+
+jmhCompileGeneratedClasses {
+  options.compilerArgs = ['--enable-preview']
+}
+
+compileJmhJava {
+  options.compilerArgs = ['--enable-preview']
+}
+
+compileJava {
+  options.compilerArgs = ['--enable-preview']
 }
